feat: install e build

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -35,4 +35,8 @@ jobs:
           REMOTE_USER: "ec2-user"
           TARGET: "/var/www/html/sportsconnect"
           EXCLUDE: "/dist/, /node_modules/, **.env"
+      - name: run install e build
+        run: |
+          npm install
+          npm run build 
 
