--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -34,9 +34,5 @@ jobs:
           REMOTE_HOST: "ec2-44-212-43-220.compute-1.amazonaws.com"
           REMOTE_USER: "ec2-user"
           TARGET: "/var/www/html/sportsconnect"
-          EXCLUDE: "/dist/, /node_modules/, **.env"
-      - name: run install e build
-        run: |
-          npm install
-          npm run build 
+          EXCLUDE: "/node_modules/, **.env"
 
